testdata/baselines/reference/submodule/compiler/jsdocBracelessTypeTag1.errors.txt
index.js(12,14): error TS7006: Parameter 'arg' implicitly has an 'any' type.
index.js(16,11): error TS8010: Type annotations can only be used in TypeScript files.
index.js(19,11): error TS8010: Type annotations can only be used in TypeScript files.
index.js(20,16): error TS2322: Type '"other"' is not assignable to type '"bar" | "foo"'.


==== index.js (4 errors) ====
    /** @type () => string */
    function fn1() {
      return 42;
    }
    
    /** @type () => string */
    function fn2() {
      return "foo";
    }
    
    /** @type (arg: string) => string */
    function fn3(arg) {
                 ~~~
!!! error TS7006: Parameter 'arg' implicitly has an 'any' type.
      return arg;
    }
    
    /** @type ({ type: 'foo' } | { type: 'bar' }) & { prop: number } */
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const obj1 = { type: "foo", prop: 10 };
    
    /** @type ({ type: 'foo' } | { type: 'bar' }) & { prop: number } */
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const obj2 = { type: "other", prop: 10 };
                   ~~~~
!!! error TS2322: Type '"other"' is not assignable to type '"bar" | "foo"'.
!!! related TS6500 index.js:19:14: The expected type comes from property 'type' which is declared here on type '({ type: "foo"; } | { type: "bar"; }) & { prop: number; }'
    